fix secondary menu alignment

--- a/WebContent/css/ie.css
+++ b/WebContent/css/ie.css
@@ -17,3 +17,12 @@ div#maincontainer p{
 	line-height: 28px;
 	color: #f7f7f7;
 }
+
+ul#navlist {
+	margin-top: -20px;
+}
+
+#navlist a, #navlist a:hover {
+	padding: 10px;
+	line-height: 36px;
+}
