--- a/WebContent/css/pics.css
+++ b/WebContent/css/pics.css
@@ -409,10 +409,10 @@ ul#navlist {
 	float: right;
 	position: relative;
 	white-space: nowrap;
-	margin-top: -20px;
+	margin-top: -16px;
 	margin-right: 45px;
 	display: block;
-	margin-bottom: 20px;
+	margin-bottom: 15px;
 }
 
 #navlist li {
